# motion-camera

./: CMakeLists.txt  README.md
src/: motion_camera.cpp
